Added kriging discretisation.

--- a/packages/evo-compute/docs/examples/kriging_multiple.ipynb
+++ b/packages/evo-compute/docs/examples/kriging_multiple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f1bb81260e4fcb13",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Running Multiple Kriging Tasks\n",
@@ -19,38 +19,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c68578af8b121069",
+   "id": "1",
    "metadata": {},
-   "source": "## Authentication"
+   "source": [
+    "## Authentication"
+   ]
   },
   {
    "cell_type": "code",
-   "id": "3e9693701283b1ba",
+   "execution_count": null,
+   "id": "2",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.notebooks import ServiceManagerWidget\n",
     "\n",
     "manager = await ServiceManagerWidget.with_auth_code(\n",
     "    client_id=\"your-client-id\", cache_location=\"./notebook-data\"\n",
     ").login()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "5c7b2e5a03e86b8e",
+   "execution_count": null,
+   "id": "3",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Load the widgets extension for rich HTML display\n",
     "%load_ext evo.widgets"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "b25b7b48eec5f70f",
+   "id": "4",
    "metadata": {},
    "source": [
     "## Load Source PointSet and Variogram\n",
@@ -60,8 +62,10 @@
   },
   {
    "cell_type": "code",
-   "id": "1c666e7471d14b0a",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.objects.typed import object_from_uuid\n",
     "\n",
@@ -72,25 +76,25 @@
     "\n",
     "# Display the pointset (pretty-printed in Jupyter)\n",
     "source_pointset"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "d8e2e2fb7c6ec087",
+   "execution_count": null,
+   "id": "6",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# View the pointset attributes\n",
     "source_pointset.attributes"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "e70985d9e33fa441",
+   "execution_count": null,
+   "id": "7",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Load the variogram\n",
     "variogram = await object_from_uuid(manager, \"72cd9b83-90f4-4cb0-9691-95728e3f9cbb\")\n",
@@ -100,24 +104,22 @@
     "\n",
     "# Display the variogram (pretty-printed in Jupyter)\n",
     "variogram"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "7b589dc133409522",
+   "execution_count": null,
+   "id": "8",
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(f\"Source: {source_pointset.name}\")\n",
     "print(f\"Variogram: {variogram.name}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "1425723496cdba48",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Create Target Block Model\n",
@@ -128,8 +130,10 @@
   },
   {
    "cell_type": "code",
-   "id": "e95305cd19655e37",
+   "execution_count": null,
+   "id": "10",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import uuid\n",
     "\n",
@@ -155,49 +159,52 @@
     "print(f\"Created Block Model: {block_model.name}\")\n",
     "print(f\"Block Model UUID: {block_model.block_model_uuid}\")\n",
     "print(f\"Bounding Box: {block_model.bounding_box}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "34225355701a677",
+   "execution_count": null,
+   "id": "11",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Use existing block model instead\n",
     "# lock_model = await object_from_uuid(manager, \"9e19c1e7-3a52-452a-978f-73dc9440dbbe\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "27d0fe8cc7686446",
+   "execution_count": null,
+   "id": "12",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Display the block model (pretty-printed in Jupyter)\n",
     "block_model"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "3bfdcd9f6c86e8ce",
+   "id": "13",
    "metadata": {},
    "source": [
     "## Define Kriging Scenarios\n",
     "\n",
     "Create multiple parameter sets varying the `max_samples` parameter to study its effect.\n",
-    "All scenarios target the same Block Model, creating different attributes."
+    "All scenarios target the same Block Model, creating different attributes.\n",
+    "\n",
+    "Each scenario also uses `BlockDiscretisation` to subdivide target blocks into 3×3×2 sub-cells\n",
+    "for volume-averaged block kriging. Omit `block_discretisation` (or pass `None`) for point kriging."
    ]
   },
   {
    "cell_type": "code",
-   "id": "72569385b009697c",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "from evo.compute.tasks import SearchNeighborhood\n",
+    "from evo.compute.tasks import BlockDiscretisation, SearchNeighborhood\n",
     "from evo.compute.tasks.kriging import KrigingParameters\n",
     "\n",
     "# Define different max_samples values to test\n",
@@ -207,14 +214,14 @@
     "\n",
     "# Create search ellipsoid by scaling the variogram ellipsoid by 2x\n",
     "search_ellipsoid = var_ell.scaled(2.0)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "ff6c5478046ccd4a",
+   "execution_count": null,
+   "id": "15",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Visualize variogram and search ellipsoids with pointset data\n",
     "import plotly.graph_objects as go\n",
@@ -242,17 +249,22 @@
     "fig = go.Figure(data=[var_mesh, search_mesh, scatter])\n",
     "fig.update_layout(title=\"Kriging Inputs: Variogram & Search Ellipsoids\", scene=dict(aspectmode=\"data\"), showlegend=True)\n",
     "fig.show()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "71640ae83be3758d",
+   "execution_count": null,
+   "id": "16",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Base source configuration\n",
     "source = source_pointset.attributes[\"Ag_ppm Values\"]\n",
+    "\n",
+    "# Block discretisation subdivides each target block into nx * ny * nz sub-cells.\n",
+    "# The kriged value is averaged across these sub-cells, producing a more accurate\n",
+    "# volume-averaged estimate (block kriging) compared to point kriging (no discretisation).\n",
+    "discretisation = BlockDiscretisation(nx=3, ny=3, nz=2)\n",
     "\n",
     "# Create parameter sets for each scenario, all targeting the same Block Model\n",
     "# Note: method defaults to ordinary kriging, so we don't need to specify it\n",
@@ -263,18 +275,17 @@
     "        target=block_model.attributes[f\"Samples={max_samples}\"],\n",
     "        variogram=variogram,\n",
     "        search=SearchNeighborhood(ellipsoid=search_ellipsoid, max_samples=max_samples),\n",
+    "        block_discretisation=discretisation,\n",
     "    )\n",
     "    parameter_sets.append(params)\n",
     "    print(f\"Prepared scenario with max_samples={max_samples}\")\n",
     "\n",
     "print(f\"\\nCreated {len(parameter_sets)} parameter sets\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "5a6502b5b49049c2",
+   "id": "17",
    "metadata": {},
    "source": [
     "## Run Multiple Kriging Tasks\n",
@@ -285,8 +296,10 @@
   },
   {
    "cell_type": "code",
-   "id": "a5781d9044d8069b",
+   "execution_count": null,
+   "id": "18",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.compute.tasks import run\n",
     "\n",
@@ -296,13 +309,11 @@
     "results = await run(manager, parameter_sets)\n",
     "\n",
     "print(f\"\\nAll {len(results)} scenarios completed!\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "38b0d98f5cd815de",
+   "id": "19",
    "metadata": {},
    "source": [
     "## View Block Model Attributes\n",
@@ -314,32 +325,32 @@
   },
   {
    "cell_type": "code",
-   "id": "dde21c45b5ef53d5",
+   "execution_count": null,
+   "id": "20",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Refresh the block model to see the new attributes added by kriging\n",
     "block_model = await block_model.refresh()\n",
     "\n",
     "# Pretty-print the block model to see its current state\n",
     "block_model"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "418abecd39537fd3",
+   "execution_count": null,
+   "id": "21",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# View just the attributes (pretty-printed table in Jupyter)\n",
     "block_model.attributes"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "a1567820ce6fdf67",
+   "id": "22",
    "metadata": {},
    "source": [
     "## Query Results from Block Model\n",
@@ -349,8 +360,10 @@
   },
   {
    "cell_type": "code",
-   "id": "20fbbf6c5b646226",
+   "execution_count": null,
+   "id": "23",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Query the Block Model for all scenario columns using to_dataframe()\n",
     "scenario_columns = [f\"Samples={ms}\" for ms in max_samples_values]\n",
@@ -360,53 +373,53 @@
     "\n",
     "print(f\"Retrieved {len(df)} blocks with {len(scenario_columns)} scenario columns\")\n",
     "df.head(10)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "b01ed9906eaab55d",
+   "id": "24",
    "metadata": {},
-   "source": "## Display Results"
+   "source": [
+    "## Display Results"
+   ]
   },
   {
    "cell_type": "code",
-   "id": "21a90c684f360be8",
+   "execution_count": null,
+   "id": "25",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Pretty-print the Block Model with all scenarios (includes Portal/Viewer links)\n",
     "block_model"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "4739679470231813",
+   "execution_count": null,
+   "id": "26",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Show individual job result messages\n",
     "for i, (job_result, max_samples) in enumerate(zip(results, max_samples_values)):\n",
     "    print(f\"Scenario {i + 1}: max_samples={max_samples} - {job_result.message}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "53ac19b403009d17",
+   "execution_count": null,
+   "id": "27",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Display first result (pretty-printed)\n",
     "results[0]"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "d7ca52080afdb6de",
+   "id": "28",
    "metadata": {},
    "source": [
     "## Analyze Results\n",
@@ -416,20 +429,22 @@
   },
   {
    "cell_type": "code",
-   "id": "ac4853d0f5643ebf",
+   "execution_count": null,
+   "id": "29",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Show statistics for each scenario\n",
     "print(\"Statistics by max_samples:\")\n",
     "print(df[scenario_columns].describe())"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "ab75608f2bd61045",
+   "execution_count": null,
+   "id": "30",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Optional: Visualize the differences using plotly\n",
     "try:\n",
@@ -447,13 +462,11 @@
     "    fig.show()\n",
     "except ImportError:\n",
     "    print(\"Install plotly for visualization: pip install plotly\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "c11f12ca59f50c5b",
+   "id": "31",
    "metadata": {},
    "source": [
     "## Create a Report on the Block Model\n",
@@ -467,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1675aeee74d1cfd",
+   "id": "32",
    "metadata": {},
    "source": [
     "### Add a Domain Column\n",
@@ -478,8 +491,10 @@
   },
   {
    "cell_type": "code",
-   "id": "29a3c95b9c8aa840",
+   "execution_count": null,
+   "id": "33",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Get block model data\n",
     "df = await block_model.to_dataframe()\n",
@@ -509,25 +524,23 @@
     "# Check domain distribution\n",
     "print(\"\\nDomain distribution:\")\n",
     "print(df[\"domain\"].value_counts())"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "faa2d93ec100e5dc",
+   "execution_count": null,
+   "id": "34",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Refresh to see the new attribute\n",
     "block_model = await block_model.refresh()\n",
     "block_model.attributes"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "a454211e237cf67d",
+   "id": "35",
    "metadata": {},
    "source": [
     "### Set Units on Kriged Attributes\n",
@@ -538,8 +551,10 @@
   },
   {
    "cell_type": "code",
-   "id": "8d64902b98de95db",
+   "execution_count": null,
+   "id": "36",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.blockmodels import Units\n",
     "\n",
@@ -556,13 +571,11 @@
     "\n",
     "# View updated attributes\n",
     "block_model.attributes"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "e08c241a674a9459",
+   "id": "37",
    "metadata": {},
    "source": [
     "### Create and Run the Report\n",
@@ -577,8 +590,10 @@
   },
   {
    "cell_type": "code",
-   "id": "f2ad2b7ba64ead4d",
+   "execution_count": null,
+   "id": "38",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.blockmodels.typed import (\n",
     "    Aggregation,\n",
@@ -616,24 +631,22 @@
     "# Create the report\n",
     "report = await block_model.create_report(report_data)\n",
     "print(f\"Created report: {report.name}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "id": "a8b3a597064adda",
+   "execution_count": null,
+   "id": "39",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Pretty-print the report (shows BlockSync link)\n",
     "report"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "995315cad71915d6",
+   "id": "40",
    "metadata": {},
    "source": [
     "### View Report Results\n",
@@ -643,31 +656,34 @@
   },
   {
    "cell_type": "code",
-   "id": "162da59dfb8a686b",
+   "execution_count": null,
+   "id": "41",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Get the latest report result\n",
     "result = await report.refresh()\n",
     "\n",
     "# Pretty-print the result (displays table in Jupyter)\n",
     "result"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "42",
+   "metadata": {},
    "source": [
     "### Filter kriging results on a category column\n",
     "\n",
     "Krigging can be run with a filter on a category column, which allows only for a specific area to be updated rather than the entire block model.\n"
-   ],
-   "id": "a6cce11f165de478"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "43",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.compute.tasks import RegionFilter\n",
     "\n",
@@ -698,24 +714,21 @@
     "results = await run(manager, parameter_sets)\n",
     "\n",
     "print(f\"\\nAll {len(results)} scenarios completed!\")"
-   ],
-   "id": "906f9599397b15a4",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "44",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Refresh the block model to see the new attributes added by kriging\n",
     "block_model = await block_model.refresh()\n",
     "\n",
     "# Pretty-print the block model to see its current state\n",
     "block_model"
-   ],
-   "id": "5a93dca60e185cd5",
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
