Polish before public PR.

--- a/packages/evo-compute/docs/examples/kriging.ipynb
+++ b/packages/evo-compute/docs/examples/kriging.ipynb
@@ -208,7 +208,7 @@
     "\n",
     "# Run the kriging task (progress feedback is shown by default)\n",
     "print(\"Submitting kriging task...\")\n",
-    "result = await run(manager, kriging_params)\n",
+    "result = await run(manager, kriging_params, preview=True)\n",
     "\n",
     "# Display the kriging result (pretty-printed)\n",
     "result"
@@ -343,11 +343,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "id": "e74558d79e1af028",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "from evo.objects.typed import Anisotropy, EllipsoidRanges, SphericalStructure, Variogram, VariogramData\n",
+    "from evo.objects.typed import (\n",
+    "    Ellipsoid,\n",
+    "    EllipsoidRanges,\n",
+    "    Rotation,\n",
+    "    SphericalStructure,\n",
+    "    Variogram,\n",
+    "    VariogramData,\n",
+    ")\n",
     "\n",
     "# Define a spherical variogram model using typed classes\n",
     "variogram_data = VariogramData(\n",
@@ -360,8 +368,9 @@
     "    structures=[\n",
     "        SphericalStructure(\n",
     "            contribution=0.9,\n",
-    "            anisotropy=Anisotropy(\n",
-    "                ellipsoid_ranges=EllipsoidRanges(major=200.0, semi_major=200.0, minor=100.0),\n",
+    "            anisotropy=Ellipsoid(\n",
+    "                ranges=EllipsoidRanges(major=200.0, semi_major=200.0, minor=100.0),\n",
+    "                rotation=Rotation(dip_azimuth=10.0, dip=20.0, pitch=30.0),\n",
     "            ),\n",
     "        )\n",
     "    ],\n",
@@ -373,19 +382,18 @@
     "\n",
     "print(f\"Created variogram: {variogram_created.name}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "id": "cd6189c97bbbf5ac"
   },
   {
-   "cell_type": "code",
-   "id": "b80d29a5a5a7abdd",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# Pretty-print the created variogram\n",
     "variogram_created"
    ],
-   "outputs": [],
-   "execution_count": null
+   "id": "449afd3af83c5914"
   },
   {
    "cell_type": "markdown",
@@ -507,12 +515,12 @@
    "source": "### Run Kriging on Created Objects"
   },
   {
-   "cell_type": "code",
-   "id": "1978a91b938313cd",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "from evo.objects.typed import Ellipsoid, EllipsoidRanges\n",
-    "from evo.objects.typed.ellipsoid import Rotation as EllipsoidRotation\n",
+    "from evo.objects.typed import Ellipsoid, EllipsoidRanges, Rotation\n",
     "\n",
     "from evo.compute.tasks import SearchNeighborhood, Target, run\n",
     "from evo.compute.tasks.kriging import KrigingParameters\n",
@@ -526,7 +534,7 @@
     "    search=SearchNeighborhood(\n",
     "        ellipsoid=Ellipsoid(\n",
     "            ranges=EllipsoidRanges(major=134.0, semi_major=90.0, minor=40.0),\n",
-    "            rotation=EllipsoidRotation(dip_azimuth=100.0, dip=65.0, pitch=75.0),\n",
+    "            rotation=Rotation(dip_azimuth=100.0, dip=65.0, pitch=75.0),\n",
     "        ),\n",
     "        max_samples=20,\n",
     "    ),\n",
@@ -534,23 +542,22 @@
     "\n",
     "# Run the kriging task\n",
     "print(\"Submitting kriging task...\")\n",
-    "result = await run(manager, kriging_params)\n",
+    "result = await run(manager, kriging_params, preview=True)\n",
     "\n",
     "print(\"Task completed!\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "id": "4d085c0c9c1f30e4"
   },
   {
-   "cell_type": "code",
-   "id": "a5ba965d5de29fb5",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# Display the kriging result (pretty-printed)\n",
     "result"
    ],
-   "outputs": [],
-   "execution_count": null
+   "id": "acba8b49cfbcc650"
   },
   {
    "cell_type": "code",
