--- a/code-samples/geoscience-objects/running-kriging-compute/running-kriging-compute.ipynb
+++ b/code-samples/geoscience-objects/running-kriging-compute/running-kriging-compute.ipynb
@@ -1,8 +1,8 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Running Kriging Compute\n",
     "\n",
@@ -23,8 +23,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1. Authentication\n",
     "\n",
@@ -34,8 +34,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from evo.notebooks import ServiceManagerWidget\n",
     "\n",
@@ -48,21 +46,23 @@
     "    redirect_url=redirect_url,\n",
     "    cache_location=\"./notebook-data\",\n",
     ").login()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Load the widgets extension for rich HTML display\n",
     "%load_ext evo.widgets"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 2. Load and Create PointSet from Drill Hole Data\n",
     "\n",
@@ -73,10 +73,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -107,13 +105,13 @@
     "print(\"\\nCopper (CU_pct) statistics:\")\n",
     "print(f\"  Mean: {df['CU_pct'].mean():.3f}%, Variance: {df['CU_pct'].var():.3f}\")\n",
     "df.head()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from evo.objects.typed import EpsgCode, PointSet, PointSetData\n",
     "\n",
@@ -122,7 +120,7 @@
     "print(f\"Points to upload: {len(coords_df)}\")\n",
     "\n",
     "pointset_data = PointSetData(\n",
-    "    name=\"WP Drill Hole Assays 12\",\n",
+    "    name=\"WP Drill Hole Assays\",\n",
     "    description=\"Copper assay data from 55 downholes\",\n",
     "    locations=coords_df,\n",
     "    coordinate_reference_system=EpsgCode(32650),  # UTM Zone 50N\n",
@@ -135,31 +133,33 @@
     "# Add CU_pct attribute separately\n",
     "# await pointset.locations.attributes.set_attributes(df[[\"CU_pct\"]])\n",
     "# print(f\"Added CU_pct attribute\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Display the pointset with rich HTML formatting\n",
     "pointset"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# View available attributes\n",
     "pointset.attributes"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 3. Create a Variogram Model\n",
     "\n",
@@ -188,8 +188,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from evo.objects.typed import (\n",
     "    Ellipsoid,\n",
@@ -249,28 +247,30 @@
     "# Create the variogram object in Evo\n",
     "variogram = await Variogram.create(manager, variogram_data)\n",
     "print(f\"Created variogram: {variogram.name}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Display the variogram with rich HTML formatting\n",
     "variogram"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inspecting Variogram Properties"
    ]
   },
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### Inspecting Variogram Properties"
-  },
-  {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "print(f\"Variogram: {variogram.name}\")\n",
     "print(f\"Sill: {variogram.sill}\")\n",
@@ -289,11 +289,13 @@
     "    print(\n",
     "        f\"  Ranges: major={ranges.get('major')}m, semi_major={ranges.get('semi_major')}m, minor={ranges.get('minor')}m\"\n",
     "    )"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 4. Visualize Variogram Curves\n",
     "\n",
@@ -301,10 +303,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# Get variogram curves for the three principal directions\n",
     "major, semi_major, minor = variogram.get_principal_directions()\n",
@@ -313,13 +313,13 @@
     "print(f\"Semi-major direction: range={semi_major.range_value}m\")\n",
     "print(f\"Minor direction: range={minor.range_value}m\")\n",
     "print(f\"Points per curve: {len(major.distance)}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "import plotly.graph_objects as go\n",
     "\n",
@@ -379,11 +379,13 @@
     ")\n",
     "\n",
     "fig.show()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 5. Working with Ellipsoids\n",
     "\n",
@@ -393,10 +395,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# Get the ellipsoid from the variogram (uses structure with largest volume by default)\n",
     "var_ellipsoid = variogram.get_ellipsoid()\n",
@@ -410,11 +410,13 @@
     "search_ellipsoid = var_ellipsoid.scaled(2.0)\n",
     "\n",
     "print(f\"\\nSearch ellipsoid (2x): major={search_ellipsoid.ranges.major}m\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 6. Visualize PointSet and Variogram Ellipsoid Together\n",
     "\n",
@@ -425,10 +427,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# Get pointset data for visualization\n",
     "points_df = await pointset.to_dataframe()\n",
@@ -440,13 +440,13 @@
     "    points_df[\"z\"].mean(),\n",
     ")\n",
     "print(f\"Data centroid: ({center[0]:.1f}, {center[1]:.1f}, {center[2]:.1f})\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# Generate surface mesh points for visualization\n",
     "vx, vy, vz = var_ellipsoid.surface_points(center=center, n_points=25)\n",
@@ -526,11 +526,13 @@
     ")\n",
     "\n",
     "fig.show()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 7. View Objects in Evo\n",
     "\n",
@@ -538,21 +540,21 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "from evo.widgets import get_viewer_url_for_objects\n",
     "\n",
     "# Generate a viewer URL to see both objects together\n",
     "viewer_url = get_viewer_url_for_objects(manager, [pointset, variogram])\n",
     "print(f\"View in Evo Viewer: {viewer_url}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "---\n",
     "\n",
@@ -564,41 +566,41 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "from evo.blockmodels import Units\n",
+    "from evo.blockmodels.typed import Units\n",
     "from evo.objects.typed import BlockModel, Point3, RegularBlockModelData, Size3d, Size3i\n",
     "\n",
     "# Define block model covering the drill hole extent\n",
     "bm_data = RegularBlockModelData(\n",
-    "    name=\"CU Kriging Estimate 2\",\n",
+    "    name=\"CU Kriging Estimate\",\n",
     "    description=\"Block model with kriged copper grades\",\n",
     "    origin=Point3(x=444750, y=492850, z=2350),\n",
     "    n_blocks=Size3i(nx=50, ny=75, nz=45),  # 50x75x45 blocks\n",
     "    block_size=Size3d(dx=20.0, dy=20.0, dz=20.0),  # 20m blocks\n",
-    "    crs=\"EPSG:32650\",\n",
+    "    coordinate_reference_system=\"EPSG:32650\",\n",
     "    size_unit_id=Units.METRES,\n",
     ")\n",
     "\n",
     "block_model = await BlockModel.create_regular(manager, bm_data)\n",
     "print(f\"Created Block Model: {block_model.name}\")\n",
     "print(f\"Block Model UUID: {block_model.block_model_uuid}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Display the block model metadata\n",
     "block_model"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 9. Define Kriging Parameters\n",
     "\n",
@@ -606,10 +608,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "from evo.compute.tasks import SearchNeighborhood\n",
     "from evo.compute.tasks.kriging import KrigingParameters\n",
@@ -628,11 +628,13 @@
     "\n",
     "print(\"Kriging source: CU_pct from pointset\")\n",
     "print(f\"Search ellipsoid: major={search_ellipsoid.ranges.major}m\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 10. Run Kriging Task\n",
     "\n",
@@ -640,34 +642,34 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "from evo.compute.tasks import run\n",
     "\n",
     "# Submit kriging task (progress feedback is shown by default)\n",
     "print(\"Submitting kriging task...\")\n",
-    "result = await run(manager, params)\n",
+    "result = await run(manager, params, preview=True)\n",
     "\n",
     "print(\"Kriging complete!\")\n",
     "print(f\"Result: {result.message}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# Display the kriging result (pretty-printed in Jupyter)\n",
     "result"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 11. View Kriging Results\n",
     "\n",
@@ -675,33 +677,31 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# Refresh block model to see new attributes\n",
     "block_model = await block_model.refresh()\n",
     "\n",
     "# Display the block model (pretty-printed in Jupyter)\n",
     "block_model"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# View the block model attributes\n",
     "block_model.attributes"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# Get the kriged values as a DataFrame\n",
     "results_df = await block_model.to_dataframe(columns=[\"CU_estimate\"])\n",
@@ -709,11 +709,13 @@
     "print(f\"Estimated {len(results_df)} blocks\")\n",
     "print(\"\\nStatistics for CU_estimate:\")\n",
     "print(results_df[\"CU_estimate\"].describe())"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 12. Running Multiple Kriging Scenarios\n",
     "\n",
@@ -721,10 +723,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "max_samples_values = [5, 10, 15, 20]\n",
     "\n",
@@ -744,46 +744,48 @@
     "    print(f\"Prepared scenario with max_samples={max_samples}\")\n",
     "\n",
     "print(f\"\\nCreated {len(parameter_sets)} parameter sets\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# Run all scenarios in parallel\n",
     "print(f\"Submitting {len(parameter_sets)} kriging tasks...\")\n",
-    "results = await run(manager, parameter_sets)\n",
+    "results = await run(manager, parameter_sets, preview=True)\n",
     "\n",
     "print(f\"\\nAll {len(results)} scenarios completed!\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# Display the results (pretty-printed in Jupyter)\n",
     "results"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "metadata": {},
    "source": [
     "# Refresh and view block model with all new attributes\n",
     "block_model = await block_model.refresh()\n",
     "block_model"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -797,7 +799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
