--- a/packages/evo-compute/docs/examples/kriging_multiple.ipynb
+++ b/packages/evo-compute/docs/examples/kriging_multiple.ipynb
@@ -27,28 +27,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from evo.notebooks import ServiceManagerWidget\n",
     "\n",
     "manager = await ServiceManagerWidget.with_auth_code(\n",
     "    client_id=\"your-client-id\", cache_location=\"./notebook-data\"\n",
     ").login()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "3",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Load the widgets extension for rich HTML display\n",
     "%load_ext evo.widgets"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -62,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from evo.objects.typed import object_from_uuid\n",
     "\n",
@@ -76,25 +74,25 @@
     "\n",
     "# Display the pointset (pretty-printed in Jupyter)\n",
     "source_pointset"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "6",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# View the pointset attributes\n",
     "source_pointset.attributes"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "7",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Load the variogram\n",
     "variogram = await object_from_uuid(manager, \"72cd9b83-90f4-4cb0-9691-95728e3f9cbb\")\n",
@@ -104,18 +102,20 @@
     "\n",
     "# Display the variogram (pretty-printed in Jupyter)\n",
     "variogram"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "8",
    "metadata": {},
-   "outputs": [],
    "source": [
     "print(f\"Source: {source_pointset.name}\")\n",
     "print(f\"Variogram: {variogram.name}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -130,14 +130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "10",
    "metadata": {},
-   "outputs": [],
    "source": [
     "import uuid\n",
     "\n",
-    "from evo.blockmodels import Units\n",
+    "from evo.blockmodels.typed import Units\n",
     "from evo.objects.typed import BlockModel, Point3, RegularBlockModelData, Size3d, Size3i\n",
     "\n",
     "run_uuid = uuid.uuid4()\n",
@@ -150,7 +148,7 @@
     "    origin=Point3(x=10000, y=100000, z=200),\n",
     "    n_blocks=Size3i(nx=40, ny=40, nz=40),\n",
     "    block_size=Size3d(dx=25.0, dy=25.0, dz=10.0),\n",
-    "    crs=\"EPSG:32632\",\n",
+    "    coordinate_reference_system=\"EPSG:32632\",\n",
     "    size_unit_id=Units.METRES,\n",
     ")\n",
     "\n",
@@ -159,29 +157,31 @@
     "print(f\"Created Block Model: {block_model.name}\")\n",
     "print(f\"Block Model UUID: {block_model.block_model_uuid}\")\n",
     "print(f\"Bounding Box: {block_model.bounding_box}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "11",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Use existing block model instead\n",
     "# lock_model = await object_from_uuid(manager, \"9e19c1e7-3a52-452a-978f-73dc9440dbbe\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "12",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Display the block model (pretty-printed in Jupyter)\n",
     "block_model"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -199,10 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "14",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from evo.compute.tasks import BlockDiscretisation, SearchNeighborhood\n",
     "from evo.compute.tasks.kriging import KrigingParameters\n",
@@ -214,14 +212,14 @@
     "\n",
     "# Create search ellipsoid by scaling the variogram ellipsoid by 2x\n",
     "search_ellipsoid = var_ell.scaled(2.0)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "15",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Visualize variogram and search ellipsoids with pointset data\n",
     "import plotly.graph_objects as go\n",
@@ -249,14 +247,14 @@
     "fig = go.Figure(data=[var_mesh, search_mesh, scatter])\n",
     "fig.update_layout(title=\"Kriging Inputs: Variogram & Search Ellipsoids\", scene=dict(aspectmode=\"data\"), showlegend=True)\n",
     "fig.show()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "16",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Base source configuration\n",
     "source = source_pointset.attributes[\"Ag_ppm Values\"]\n",
@@ -281,7 +279,9 @@
     "    print(f\"Prepared scenario with max_samples={max_samples}\")\n",
     "\n",
     "print(f\"\\nCreated {len(parameter_sets)} parameter sets\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -296,20 +296,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "18",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from evo.compute.tasks import run\n",
     "\n",
     "# Run all scenarios in parallel (progress feedback is shown by default)\n",
     "print(f\"Submitting {len(parameter_sets)} kriging tasks in parallel...\")\n",
     "\n",
-    "results = await run(manager, parameter_sets)\n",
+    "results = await run(manager, parameter_sets, preview=True)\n",
     "\n",
     "print(f\"\\nAll {len(results)} scenarios completed!\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -325,28 +325,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "20",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Refresh the block model to see the new attributes added by kriging\n",
     "block_model = await block_model.refresh()\n",
     "\n",
     "# Pretty-print the block model to see its current state\n",
     "block_model"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "21",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# View just the attributes (pretty-printed table in Jupyter)\n",
     "block_model.attributes"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -360,10 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "23",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Query the Block Model for all scenario columns using to_dataframe()\n",
     "scenario_columns = [f\"Samples={ms}\" for ms in max_samples_values]\n",
@@ -373,7 +371,9 @@
     "\n",
     "print(f\"Retrieved {len(df)} blocks with {len(scenario_columns)} scenario columns\")\n",
     "df.head(10)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -385,37 +385,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "25",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Pretty-print the Block Model with all scenarios (includes Portal/Viewer links)\n",
     "block_model"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "26",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Show individual job result messages\n",
     "for i, (job_result, max_samples) in enumerate(zip(results, max_samples_values)):\n",
     "    print(f\"Scenario {i + 1}: max_samples={max_samples} - {job_result.message}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "27",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Display first result (pretty-printed)\n",
     "results[0]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -429,22 +429,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "29",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Show statistics for each scenario\n",
     "print(\"Statistics by max_samples:\")\n",
     "print(df[scenario_columns].describe())"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "30",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Optional: Visualize the differences using plotly\n",
     "try:\n",
@@ -462,7 +460,9 @@
     "    fig.show()\n",
     "except ImportError:\n",
     "    print(\"Install plotly for visualization: pip install plotly\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -491,10 +491,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "33",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Get block model data\n",
     "df = await block_model.to_dataframe()\n",
@@ -524,19 +522,21 @@
     "# Check domain distribution\n",
     "print(\"\\nDomain distribution:\")\n",
     "print(df[\"domain\"].value_counts())"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "34",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Refresh to see the new attribute\n",
     "block_model = await block_model.refresh()\n",
     "block_model.attributes"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -551,12 +551,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "36",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from evo.blockmodels import Units\n",
+    "from evo.blockmodels.typed import Units\n",
     "\n",
     "# Set units on the kriged attribute columns\n",
     "# Use the first scenario column name as an example\n",
@@ -571,7 +569,9 @@
     "\n",
     "# View updated attributes\n",
     "block_model.attributes"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -590,10 +590,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "38",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from evo.blockmodels.typed import (\n",
     "    Aggregation,\n",
@@ -631,18 +629,20 @@
     "# Create the report\n",
     "report = await block_model.create_report(report_data)\n",
     "print(f\"Created report: {report.name}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "39",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Pretty-print the report (shows BlockSync link)\n",
     "report"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -656,17 +656,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "41",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Get the latest report result\n",
     "result = await report.refresh()\n",
     "\n",
     "# Pretty-print the result (displays table in Jupyter)\n",
     "result"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -680,10 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "43",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from evo.compute.tasks import RegionFilter\n",
     "\n",
@@ -711,24 +709,26 @@
     "# Run all scenarios in parallel (progress feedback is shown by default)\n",
     "print(f\"Submitting {len(parameter_sets)} kriging tasks in parallel...\")\n",
     "\n",
-    "results = await run(manager, parameter_sets)\n",
+    "results = await run(manager, parameter_sets, preview=True)\n",
     "\n",
     "print(f\"\\nAll {len(results)} scenarios completed!\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "44",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Refresh the block model to see the new attributes added by kriging\n",
     "block_model = await block_model.refresh()\n",
     "\n",
     "# Pretty-print the block model to see its current state\n",
     "block_model"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
